fix project alignment and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -87,4 +87,11 @@ nav ul a {
     border: 4px solid black;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    gap: 12px;
+    padding: 12px;
+}
+
+.project-info img {
+    max-width: 500px;
 }
